# example_code

./: README.md  clean.sh  make.sh
kernel/1 debugfs/: debugfs-test.ko
kernel/1_debugfs/: debugfs-test.bb
kernel/1_debugfs/files/: Makefile  debugfs-test.c
kernel/2 class_create/: class-create-test.c  class-create-test.ko
kernel/2_class_create/: class-create-test.bb  test.ko
kernel/2_class_create/files/: Makefile
kernel/3 class_create_and_device/: class-and-device-test.c  class-and-device-test.ko
kernel/4 input/: input-test.c  input-test.ko
kernel/5 高精度定时器hrtimer/: hrtimer-test.c  hrtimer-test.ko
kernel/6 platform_device/: platform-device-test.c  platform-device-test.ko
kernel/7 misc/: misc-test.c  misc-test.ko
kernel/yocto_linux_build_template/: yocto-build-test.bb
kernel/yocto_linux_build_template/files/: Makefile
user/1_socket/client/: CMakeLists.txt  main.cpp
user/1_socket/server/: CMakeLists.txt  main.cpp
user/2_管道PIPE/: CMakeLists.txt  main.cpp
user/3_管道FIFO/: CMakeLists.txt  fifo_read_main.cpp  fifo_write_main.cpp
user/4_消息队列/: CMakeLists.txt  read_main.cpp  write_main.cpp
user/5_共享内存/: read_main.cpp  write_main.cpp
user/6_if_nameindex结构体/: main.cc
user/7_getifaddrs函数/: CMakeLists.txt  main.cc
user/8_加载动态库/: CMakeLists.txt  cdnprint.cc  main.cc
